--- a/{{project_name}}/{% if use_cli %}cli.py{% endif %}.jinja
+++ b/{{project_name}}/{% if use_cli %}cli.py{% endif %}.jinja
@@ -13,6 +13,7 @@
 
 import argparse
 from typing import List, Optional
+from .utils.logs import logger
 
 
 def get_parser() -> argparse.ArgumentParser:
@@ -39,6 +40,6 @@ def main(args: Optional[List[str]] = None) -> int:
     """
     parser = get_parser()
     opts = parser.parse_args(args=args)
-    print(opts)  # noqa: WPS421 (side-effect in main is fine)
+    logger.info(f"opts: {opts}")
     return 0
 
